Refactor file paths and update sustainability links
Updated file paths for stylesheets and scripts to remove './' prefix. Changed links to sustainability page to be case-sensitive.

--- a/about-us.html
+++ b/about-us.html
@@ -12,10 +12,10 @@
         <link href="https://fonts.googleapis.com/css2?family=Inter:wght@100..900&family=Playfair+Display:wght@400..900&display=swap" rel="stylesheet">
         <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.8/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-sRIl4kxILFvY47J16cr9ZwB07vP4J8+LH7qKQnuqkuIAvNWLzeN8tE5YBujZqJLB" crossorigin="anonymous">
         <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.8/dist/js/bootstrap.bundle.min.js" integrity="sha384-FKyoEForCGlyvwx9Hj09JcYn3nv7wiPVlz7YYwJrWVcXK/BmnVDxM+D2scQbITxI" crossorigin="anonymous"></script>
-        <link rel="stylesheet" href="./css/global.css">
-        <link rel="stylesheet" href="./css/jeffrey.css">
-        <script src="./js/common.js"></script>
-        <script src="./js/jeffrey.js"></script>
+        <link rel="stylesheet" href="./global.css">
+        <link rel="stylesheet" href="./jeffrey.css">
+        <script src="./common.js"></script>
+        <script src="./jeffrey.js"></script>
     </head>
     
     <body class="about-us-page">
@@ -24,7 +24,7 @@
             <header class="navbar-header">
                 <div class="navbar-container">
                     <a class="navbar-logo" title="DewValley Foods Home" href="./index.html">
-                        <img src="./images/logo.svg" alt="DewValley Foods logo" class="top_logo">
+                        <img src="./logo.svg" alt="DewValley Foods logo" class="top_logo">
                     </a>
 
                     <div class="right_nav">
@@ -41,14 +41,14 @@
                                 <li class="menu-item"><a href="./about-us.html">About Us</a></li>
                                 <li class="menu-item"><a href="./our-products.html">Our Products</a></li>
                                 <li class="menu-item"><a href="./our-process.html">Our Process</a></li>
-                                <li class="menu-item"><a href="./sustainability.html">Sustainability</a></li>
+                                <li class="menu-item"><a href="./Sustainability.html">Sustainability</a></li>
                                 <li class="menu-item"><a href="./contact.html">Contact</a></li>
                             </ul> 
                         </nav>
 
                         <div class="phone">
                             <a href="tel:(01) 123 4567">
-                                <img src="./images/phone.svg" alt="Call us">
+                                <img src="./phone.svg" alt="Call us">
                             </a>
                         </div>
 
@@ -62,7 +62,7 @@
                         <li class="menu-item"><a href="./about-us.html">About Us</a></li>
                         <li class="menu-item"><a href="./our-products.html">Our Products</a></li>
                         <li class="menu-item"><a href="./our-process.html">Our Process</a></li>
-                        <li class="menu-item"><a href="./sustainability.html">Sustainability</a></li>
+                        <li class="menu-item"><a href="./Sustainability.html">Sustainability</a></li>
                         <li class="menu-item"><a href="./contact.html">Contact</a></li>
                     </ul> 
                 </div>
@@ -73,7 +73,7 @@
             <!-- Hero Section -->
             <section class="section hero-section fade-in">
                 <div class="hero-frame">
-                    <img src="./images/about_factory.png" class="hero-img" alt="Dew Valley Foods facility">
+                    <img src="./about_factory.png" class="hero-img" alt="Dew Valley Foods facility">
                     <div class="hero-text">
                         <p class="hero-eyebrow">A PROUD IRISH ROOTS STORY</p>
                         <h1>Better with Dew Valley</h1>
@@ -106,7 +106,7 @@
 
                         <div class="col-lg-6">
                             <div class="split-image-frame fade-up">
-                                <img src="./images/about_shop.png" class="split-image" alt="Dew Valley products displayed on shelves">
+                                <img src="./about_shop.png" class="split-image" alt="Dew Valley products displayed on shelves">
                             </div>
                         </div>
                     </div>
@@ -179,20 +179,20 @@
             <section class="section accreditation-section">
                 <div class="accreditation-carousel-wrapper">
                     <div class="accreditation-carousel-inner">
-                        <img src="./images/about_icon_4.png" class="accreditation-logo" alt="FSC certification">
-                        <img src="./images/about_Icon_2.svg" class="accreditation-logo" alt="IFSA certification">
-                        <img src="./images/about_icon_3.png" class="accreditation-logo" alt="Quality certification">
-                        <img src="./images/about_icon_5.png" class="accreditation-logo" alt="Industry certification">
-                        <img src="./images/about_icon_6.png" class="accreditation-logo" alt="Safety certification">
-                        <img src="./images/about_Icon_1.svg" class="accreditation-logo" alt="Sedex Member">
-                        <img src="./images/about_icon_7.svg" class="accreditation-logo" alt="ISO 9001 Certified">
-                        <img src="./images/about_icon_4.png" class="accreditation-logo" alt="FSC certification">
-                        <img src="./images/about_Icon_2.svg" class="accreditation-logo" alt="IFSA certification">
-                        <img src="./images/about_icon_3.png" class="accreditation-logo" alt="Quality certification">
-                        <img src="./images/about_icon_5.png" class="accreditation-logo" alt="Industry certification">
-                        <img src="./images/about_icon_6.png" class="accreditation-logo" alt="Safety certification">
-                        <img src="./images/about_Icon_1.svg" class="accreditation-logo" alt="Sedex Member">
-                        <img src="./images/about_icon_7.svg" class="accreditation-logo" alt="ISO 9001 Certified">
+                        <img src="./about_icon_4.png" class="accreditation-logo" alt="FSC certification">
+                        <img src="./about_Icon_2.svg" class="accreditation-logo" alt="IFSA certification">
+                        <img src="./about_icon_3.png" class="accreditation-logo" alt="Quality certification">
+                        <img src="./about_icon_5.png" class="accreditation-logo" alt="Industry certification">
+                        <img src="./about_icon_6.png" class="accreditation-logo" alt="Safety certification">
+                        <img src="./about_Icon_1.svg" class="accreditation-logo" alt="Sedex Member">
+                        <img src="./about_icon_7.svg" class="accreditation-logo" alt="ISO 9001 Certified">
+                        <img src="./about_icon_4.png" class="accreditation-logo" alt="FSC certification">
+                        <img src="./about_Icon_2.svg" class="accreditation-logo" alt="IFSA certification">
+                        <img src="./about_icon_3.png" class="accreditation-logo" alt="Quality certification">
+                        <img src="./about_icon_5.png" class="accreditation-logo" alt="Industry certification">
+                        <img src="./about_icon_6.png" class="accreditation-logo" alt="Safety certification">
+                        <img src="./about_Icon_1.svg" class="accreditation-logo" alt="Sedex Member">
+                        <img src="./about_icon_7.svg" class="accreditation-logo" alt="ISO 9001 Certified">
                     </div>
                 </div>
             </section>
@@ -200,7 +200,7 @@
             <!-- Full-width hero with left-aligned text -->
             <section class="section hero-section smoking-hero-section fade-in">
                 <div class="hero-frame">
-                    <img src="./images/about_chef.png" class="hero-img" alt="Chefs preparing cooked bacon in kitchen">
+                    <img src="./about_chef.png" class="hero-img" alt="Chefs preparing cooked bacon in kitchen">
                     <div class="hero-text smoking-hero-text">
                         <p class="hero-eyebrow">SMOKING TECHNOLOGY</p>
                         <h2>Traditional smoke, modern control</h2>
@@ -222,7 +222,7 @@
                     <div class="row align-items-center g-5">
                         <div class="col-lg-6">
                             <div class="split-image-frame fade-up">
-                                <img src="./images/about_kitchen.png" class="split-image" alt="Modern food production kitchen at Dew Valley">
+                                <img src="./about_kitchen.png" class="split-image" alt="Modern food production kitchen at Dew Valley">
                             </div>
                         </div>
 
@@ -245,10 +245,10 @@
         
         <footer class="footer">
             <div class="arrow_up">
-                <img src="./images/arrow_up.svg" alt="Scroll to top">
+                <img src="./arrow_up.svg" alt="Scroll to top">
             </div>
             <div class="footer_left">
-                <img class="footer_logo" src="./images/footer_logo.svg" alt="DewValley Foods">
+                <img class="footer_logo" src="./footer_logo.svg" alt="DewValley Foods">
             </div>
             <div class="footer_right">
                 <ul>
@@ -267,7 +267,7 @@
                         <a href="./our-process.html">Our Process</a>
                     </li>
                     <li>
-                        <a href="./sustainability.html">Sustainability</a>
+                        <a href="./Sustainability.html">Sustainability</a>
                     </li>
                     <li>
                         <a href="./contact.html">Contact</a>
