--- a/Sustainability.html
+++ b/Sustainability.html
@@ -10,10 +10,10 @@
         <link href="https://fonts.googleapis.com/css2?family=Inter:wght@100..900&family=Playfair+Display:wght@400..900&display=swap" rel="stylesheet">
         <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.8/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-sRIl4kxILFvY47J16cr9ZwB07vP4J8+LH7qKQnuqkuIAvNWLzeN8tE5YBujZqJLB" crossorigin="anonymous">
         <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.8/dist/js/bootstrap.bundle.min.js" integrity="sha384-FKyoEForCGlyvwx9Hj09JcYn3nv7wiPVlz7YYwJrWVcXK/BmnVDxM+D2scQbITxI" crossorigin="anonymous"></script>
-        <link rel="stylesheet" href="./css/global.css">
-        <link rel="stylesheet" href="./css/jeffrey.css">
-        <script src="./js/common.js"></script>
-        <script src="./js/jeffrey.js"></script>
+        <link rel="stylesheet" href="./global.css">
+        <link rel="stylesheet" href="./jeffrey.css">
+        <script src="./common.js"></script>
+        <script src="./jeffrey.js"></script>
     </head>
     
     <body class="sustainability-page">
@@ -22,7 +22,7 @@
             <header class="navbar-header">
                 <div class="navbar-container">
                     <a class="navbar-logo" title="DewValley Foods Home" href="./index.html">
-                        <img src="./images/logo.svg" alt="DewValley Foods logo" class="top_logo">
+                        <img src="./logo.svg" alt="DewValley Foods logo" class="top_logo">
                     </a>
 
                     <div class="right_nav">
@@ -39,14 +39,14 @@
                                 <li class="menu-item"><a href="./about-us.html">About Us</a></li>
                                 <li class="menu-item"><a href="./our-products.html">Our Products</a></li>
                                 <li class="menu-item"><a href="./our-process.html">Our Process</a></li>
-                                <li class="menu-item"><a href="./sustainability.html">Sustainability</a></li>
+                                <li class="menu-item"><a href="./Sustainability.html">Sustainability</a></li>
                                 <li class="menu-item"><a href="./contact.html">Contact</a></li>
                             </ul> 
                         </nav>
 
                         <div class="phone">
                             <a href="tel:(01) 123 4567">
-                                <img src="./images/phone.svg" alt="Call us">
+                                <img src="./phone.svg" alt="Call us">
                             </a>
                         </div>
 
@@ -60,7 +60,7 @@
                         <li class="menu-item"><a href="./about-us.html">About Us</a></li>
                         <li class="menu-item"><a href="./our-products.html">Our Products</a></li>
                         <li class="menu-item"><a href="./our-process.html">Our Process</a></li>
-                        <li class="menu-item"><a href="./sustainability.html">Sustainability</a></li>
+                        <li class="menu-item"><a href="./Sustainability.html">Sustainability</a></li>
                         <li class="menu-item"><a href="./contact.html">Contact</a></li>
                     </ul> 
                 </div>
@@ -71,7 +71,7 @@
             <!-- Hero Section with Integrated Banner -->
             <section class="section hero-banner-integrated fade-in">
                 <div class="hero-frame-integrated">
-                    <img src="./images/sustainability-hero.png" class="hero-img-integrated" alt="Solar farm with grazing sheep">
+                    <img src="./sustainability-hero.png" class="hero-img-integrated" alt="Solar farm with grazing sheep">
                     <div class="hero-text-integrated">
                         <p class="hero-eyebrow">SUSTAINABILITY COMMITMENT</p>
                         <h1>Building a better tomorrow</h1>
@@ -105,7 +105,7 @@
                                     loop 
                                     playsinline
                                 >
-                                    <source src="./images/videoplayback.webm" type="video/webm">
+                                    <source src="./videoplayback.webm" type="video/webm">
                                     Your browser does not support the video tag.
                                 </video>
                             </div>
@@ -189,7 +189,7 @@
             <!-- Full-width hero with left-aligned text -->
             <section class="section hero-section smoking-hero-section fade-in">
                 <div class="hero-frame">
-                    <img src="./images/pig.jpg" class="hero-img" alt="Pigs in comfortable, ethical farm environment">
+                    <img src="./pig.jpg" class="hero-img" alt="Pigs in comfortable, ethical farm environment">
                     <div class="hero-text smoking-hero-text">
                         <p class="hero-eyebrow">ANIMAL WELFARE &amp; RESPONSIBLE SOURCING</p>
                         <h2>Ethical farming comes first</h2>
@@ -211,7 +211,7 @@
                     <div class="row align-items-center g-5">
                         <div class="col-lg-6">
                             <div class="split-image-frame fade-up">
-                                <img src="./images/sustainability-one.jpg" class="split-image" alt="Modern sustainable production facility">
+                                <img src="./sustainability-one.jpg" class="split-image" alt="Modern sustainable production facility">
                             </div>
                         </div>
 
@@ -245,7 +245,7 @@
 
                         <div class="col-lg-6">
                             <div class="split-image-frame fade-up">
-                                <img src="./images/sustainability-three.jpg" class="split-image" alt="Production line with quality control team">
+                                <img src="./sustainability-three.jpg" class="split-image" alt="Production line with quality control team">
                             </div>
                         </div>
                     </div>
@@ -257,10 +257,10 @@
         
         <footer class="footer">
             <div class="arrow_up">
-                <img src="./images/arrow_up.svg" alt="Scroll to top">
+                <img src="./arrow_up.svg" alt="Scroll to top">
             </div>
             <div class="footer_left">
-                <img class="footer_logo" src="./images/footer_logo.svg" alt="DewValley Foods">
+                <img class="footer_logo" src="./footer_logo.svg" alt="DewValley Foods">
             </div>
             <div class="footer_right">
                 <ul>
@@ -279,7 +279,7 @@
                         <a href="./our-process.html">Our Process</a>
                     </li>
                     <li>
-                        <a href="./sustainability.html">Sustainability</a>
+                        <a href="./Sustainability.html">Sustainability</a>
                     </li>
                     <li>
                         <a href="./contact.html">Contact</a>
