--- a/Sustainability.html
+++ b/Sustainability.html
@@ -71,7 +71,7 @@
             <!-- Hero Section with Integrated Banner -->
             <section class="section hero-banner-integrated fade-in">
                 <div class="hero-frame-integrated">
-                    <img src="./sustainability-hero.png" class="hero-img-integrated" alt="Solar farm with grazing sheep">
+                    <img src="./sustainability-hero.webp" class="hero-img-integrated" alt="Solar farm with grazing sheep">
                     <div class="hero-text-integrated">
                         <p class="hero-eyebrow">SUSTAINABILITY COMMITMENT</p>
                         <h1>Building a better tomorrow</h1>
@@ -211,7 +211,7 @@
                     <div class="row align-items-center g-5">
                         <div class="col-lg-6">
                             <div class="split-image-frame fade-up">
-                                <img src="./sustainability-one.jpg" class="split-image" alt="Modern sustainable production facility">
+                                <img src="./sustainability-one.webp" class="split-image" alt="Modern sustainable production facility">
                             </div>
                         </div>
 
@@ -245,7 +245,7 @@
 
                         <div class="col-lg-6">
                             <div class="split-image-frame fade-up">
-                                <img src="./sustainability-three.jpg" class="split-image" alt="Production line with quality control team">
+                                <img src="./sustainability-three.webp" class="split-image" alt="Production line with quality control team">
                             </div>
                         </div>
                     </div>
