Replace PNG images with WEBP format

--- a/about-us.html
+++ b/about-us.html
@@ -73,7 +73,7 @@
             <!-- Hero Section -->
             <section class="section hero-section fade-in">
                 <div class="hero-frame">
-                    <img src="./about_factory.png" class="hero-img" alt="Dew Valley Foods facility">
+                    <img src="./about_factory.webp" class="hero-img" alt="Dew Valley Foods facility">
                     <div class="hero-text">
                         <p class="hero-eyebrow">A PROUD IRISH ROOTS STORY</p>
                         <h1>Better with Dew Valley</h1>
@@ -106,7 +106,7 @@
 
                         <div class="col-lg-6">
                             <div class="split-image-frame fade-up">
-                                <img src="./about_shop.png" class="split-image" alt="Dew Valley products displayed on shelves">
+                                <img src="./about_shop.webp" class="split-image" alt="Dew Valley products displayed on shelves">
                             </div>
                         </div>
                     </div>
@@ -179,20 +179,20 @@
             <section class="section accreditation-section">
                 <div class="accreditation-carousel-wrapper">
                     <div class="accreditation-carousel-inner">
-                        <img src="./about_icon_4.png" class="accreditation-logo" alt="FSC certification">
-                        <img src="./about_Icon_2.svg" class="accreditation-logo" alt="IFSA certification">
-                        <img src="./about_icon_3.png" class="accreditation-logo" alt="Quality certification">
-                        <img src="./about_icon_5.png" class="accreditation-logo" alt="Industry certification">
-                        <img src="./about_icon_6.png" class="accreditation-logo" alt="Safety certification">
-                        <img src="./about_Icon_1.svg" class="accreditation-logo" alt="Sedex Member">
-                        <img src="./about_icon_7.svg" class="accreditation-logo" alt="ISO 9001 Certified">
-                        <img src="./about_icon_4.png" class="accreditation-logo" alt="FSC certification">
-                        <img src="./about_Icon_2.svg" class="accreditation-logo" alt="IFSA certification">
-                        <img src="./about_icon_3.png" class="accreditation-logo" alt="Quality certification">
-                        <img src="./about_icon_5.png" class="accreditation-logo" alt="Industry certification">
-                        <img src="./about_icon_6.png" class="accreditation-logo" alt="Safety certification">
-                        <img src="./about_Icon_1.svg" class="accreditation-logo" alt="Sedex Member">
-                        <img src="./about_icon_7.svg" class="accreditation-logo" alt="ISO 9001 Certified">
+                        <img src="./about_icon_4.webp" class="accreditation-logo" alt="Sedex Member">
+                        <img src="./about_Icon_2.webp" class="accreditation-logo" alt="Red Tractor Certified">
+                        <img src="./about_icon_3.webp" class="accreditation-logo" alt="IFSA certification">
+                        <img src="./about_icon_5.webp" class="accreditation-logo" alt="FSC certification">
+                        <img src="./about_icon_6.webp" class="accreditation-logo" alt="ISO 9001 Certified">
+                        <img src="./about_Icon_1.webp" class="accreditation-logo" alt="UCD Dublin">
+                        <img src="./about_icon_7.webp" class="accreditation-logo" alt="BRCS Food Safety">
+                        <img src="./about_icon_4.webp" class="accreditation-logo" alt="Sedex Member">
+                        <img src="./about_Icon_2.webp" class="accreditation-logo" alt="Red Tractor Certified">
+                        <img src="./about_icon_3.webp" class="accreditation-logo" alt="IFSA certification">
+                        <img src="./about_icon_5.webp" class="accreditation-logo" alt="FSC certification">
+                        <img src="./about_icon_6.webp" class="accreditation-logo" alt="ISO 9001 Certified">
+                        <img src="./about_Icon_1.webp" class="accreditation-logo" alt="UCD Dublin">
+                        <img src="./about_icon_7.webp" class="accreditation-logo" alt="BRCS Food Safety">
                     </div>
                 </div>
             </section>
@@ -200,7 +200,7 @@
             <!-- Full-width hero with left-aligned text -->
             <section class="section hero-section smoking-hero-section fade-in">
                 <div class="hero-frame">
-                    <img src="./about_chef.png" class="hero-img" alt="Chefs preparing cooked bacon in kitchen">
+                    <img src="./about_chef.webp" class="hero-img" alt="Chefs preparing cooked bacon in kitchen">
                     <div class="hero-text smoking-hero-text">
                         <p class="hero-eyebrow">SMOKING TECHNOLOGY</p>
                         <h2>Traditional smoke, modern control</h2>
@@ -222,7 +222,7 @@
                     <div class="row align-items-center g-5">
                         <div class="col-lg-6">
                             <div class="split-image-frame fade-up">
-                                <img src="./about_kitchen.png" class="split-image" alt="Modern food production kitchen at Dew Valley">
+                                <img src="./about_kitchen.webp" class="split-image" alt="Modern food production kitchen at Dew Valley">
                             </div>
                         </div>
 
