Replace pig.jpg with pig.webp for better quality

--- a/Sustainability.html
+++ b/Sustainability.html
@@ -189,7 +189,7 @@
             <!-- Full-width hero with left-aligned text -->
             <section class="section hero-section smoking-hero-section fade-in">
                 <div class="hero-frame">
-                    <img src="./pig.jpg" class="hero-img" alt="Pigs in comfortable, ethical farm environment">
+                    <img src="./pig.webp" class="hero-img" alt="Pigs in comfortable, ethical farm environment">
                     <div class="hero-text smoking-hero-text">
                         <p class="hero-eyebrow">ANIMAL WELFARE &amp; RESPONSIBLE SOURCING</p>
                         <h2>Ethical farming comes first</h2>
