--- a/Sustainability.html
+++ b/Sustainability.html
@@ -14,6 +14,28 @@
         <link rel="stylesheet" href="./jeffrey.css">
         <script src="./common.js"></script>
         <script src="./jeffrey.js"></script>
+        <style>
+            /* Version 1: Small image sizes - 300px height for split images, 400px for hero */
+            .hero-img-integrated {
+                max-height: 400px !important;
+                object-fit: cover;
+            }
+            .split-image-frame {
+                max-height: 300px !important;
+                overflow: hidden;
+            }
+            .split-image {
+                max-height: 300px !important;
+                object-fit: cover;
+            }
+            .hero-frame {
+                max-height: 450px !important;
+            }
+            .hero-img {
+                max-height: 450px !important;
+                object-fit: cover;
+            }
+        </style>
     </head>
     
     <body class="sustainability-page">
