Add CSS styles for hero and section layouts
Added styles for hero and split image sections, enhanced spacing, and adjusted stat card sizes.

--- a/index.html
+++ b/index.html
@@ -16,6 +16,54 @@
         <link rel="stylesheet" href="./jeffrey.css">
         <script src="./common.js"></script>
         <script src="./jeffrey.js"></script>
+        <style>
+            /* Version 4: Extra Large / Final - 600px height for split images, 80vh for hero */
+            .hero-frame {
+                min-height: 80vh !important;
+                position: relative;
+            }
+            .hero-img {
+                min-height: 80vh !important;
+                width: 100%;
+                object-fit: cover;
+            }
+            .split-image-frame {
+                min-height: 600px !important;
+                overflow: hidden;
+                border-radius: 12px;
+            }
+            .split-image {
+                min-height: 600px !important;
+                width: 100%;
+                object-fit: cover;
+            }
+            .smoking-hero-section .hero-frame {
+                min-height: 75vh !important;
+            }
+            .smoking-hero-section .hero-img {
+                min-height: 75vh !important;
+                width: 100%;
+                object-fit: cover;
+            }
+            /* Enhanced spacing for dramatic presentation */
+            .section {
+                padding: 100px 0 !important;
+            }
+            .stats-section {
+                padding: 120px 0 !important;
+            }
+            /* Larger stat cards */
+            .stat-card {
+                padding: 40px 20px !important;
+            }
+            .stat-number {
+                font-size: 4rem !important;
+            }
+            /* Enhanced accreditation logos */
+            .accreditation-logo {
+                height: 80px !important;
+            }
+        </style>
     </head>
     
     <body class="about-us-page">
