Remove unnecessary alt attributes from images

--- a/index.html
+++ b/index.html
@@ -75,7 +75,7 @@
             
             <section class="section hero-section fade-in">
                 <div class="hero-frame">
-                    <img src="./about_factory.webp" class="hero-img" alt="Factory">
+                    <img src="./about_factory.webp" class="hero-img" 
                     <div class="hero-text">
                         <p class="hero-eyebrow">A PROUD IRISH ROOTS STORY</p>
                         <h1>Better with Dew Valley</h1>
@@ -107,7 +107,7 @@
 
                         <div class="col-lg-6">
                             <div class="split-image-frame fade-up">
-                                <img src="./about_shop.webp" class="split-image" alt="Shop">
+                                <img src="./about_shop.webp" class="split-image" 
                             </div>
                         </div>
                     </div>
@@ -191,7 +191,7 @@
 
             <section class="section hero-section smoking-hero-section fade-in">
                 <div class="hero-frame">
-                    <img src="./about_chef.webp" class="hero-img" alt="Chef">
+                    <img src="./about_chef.webp" class="hero-img" 
                     <div class="hero-text smoking-hero-text">
                         <p class="hero-eyebrow">SMOKING TECHNOLOGY</p>
                         <h2>Traditional smoke, modern control</h2>
