Add alt attributes to images in Sustainability.html

--- a/Sustainability.html
+++ b/Sustainability.html
@@ -4,7 +4,13 @@
         <title>Sustainability - DewValley Foods</title>
         <meta charset="UTF-8">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
-        <link re
+        <link rel="preconnect" href="https://fonts.googleapis.com">
+        <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+        <link href="https://fonts.googleapis.com/css2?family=Inter:wght@100..900&family=Playfair+Display:wght@400..900&display=swap" rel="stylesheet">
+        <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.8/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-sRIl4kxILFvY47J16cr9ZwB07vP4J8+LH7qKQnuqkuIAvNWLzeN8tE5YBujZqJLB" crossorigin="anonymous">
+        <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.8/dist/js/bootstrap.bundle.min.js" integrity="sha384-FKyoEForCGlyvwx9Hj09JcYn3nv7wiPVlz7YYwJrWVcXK/BmnVDxM+D2scQbITxI" crossorigin="anonymous"></script>
+        <link rel="stylesheet" href="./global.css">
+        <link rel="stylesheet" href="./jeffrey.css">
         <script src="./common.js"></script>
         <script src="./jeffrey.js"></script>
         <style>
@@ -50,13 +56,27 @@
                             </a>
                         </div>
 
+                    </div>
+
+                </div>
+
+                <div class="mobile_nav_wrapper">
+                    <ul class="mobile-navbar-menu">
+                        <li class="menu-item"><a href="./index.html">Home</a></li>
+                        <li class="menu-item"><a href="./about-us.html">About Us</a></li>
+                        <li class="menu-item"><a href="./our-products.html">Our Products</a></li>
+                        <li class="menu-item"><a href="./our-process.html">Our Process</a></li>
+                        <li class="menu-item"><a href="./Sustainability.html">Sustainability</a></li>
+                        <li class="menu-item"><a href="./contact.html">Contact</a></li>
+                    </ul> 
+                </div>
             </header>
         
             <main class="main">
             
             <section class="section hero-banner-integrated fade-in">
                 <div class="hero-frame-integrated">
-                    <img src="./sustainability-hero.webp" class="hero-img-integrated" alt="
+                    <img src="./sustainability-hero.webp" class="hero-img-integrated" alt="Solar farm">
                     <div class="hero-text-integrated">
                         <p class="hero-eyebrow">SUSTAINABILITY COMMITMENT</p>
                         <h1>Building a better tomorrow</h1>
@@ -192,7 +212,7 @@
                     <div class="row align-items-center g-5">
                         <div class="col-lg-6">
                             <div class="split-image-frame fade-up">
-                                <img src="./sustainability-one.webp" class="split-image" 
+                                <img src="./sustainability-one.webp" class="split-image" alt="Production facility">
                             </div>
                         </div>
 
@@ -226,7 +246,7 @@
 
                         <div class="col-lg-6">
                             <div class="split-image-frame fade-up">
-                                <img src="./sustainability-three.webp" class="split-image"
+                                <img src="./sustainability-three.webp" class="split-image" alt="Team at work">
                             </div>
                         </div>
                     </div>
