Enhance content and image accessibility in index.html
Updated image tags and added descriptive text for better clarity.

--- a/index.html
+++ b/index.html
@@ -75,11 +75,12 @@
             
             <section class="section hero-section fade-in">
                 <div class="hero-frame">
-                    <img src="./about_factory.webp" class="hero-img" 
+                    <img src="./about_factory.webp" class="hero-img" alt="Factory">
                     <div class="hero-text">
                         <p class="hero-eyebrow">A PROUD IRISH ROOTS STORY</p>
                         <h1>Better with Dew Valley</h1>
-                        <p>
+                        <p>Starting in Thurles, we are proud to be providing premium cooked bacon for over thirty years, supplying exceptional streaky bacon from our purpose-built facility where natural curing meets cutting-edge technique.</p>
+                    </div>
                 </div>
             </section>
 
@@ -89,12 +90,12 @@
                         <div class="col-lg-6">
                             <p class="wire-eyebrow">FULLY COOKED, READY TO SERVE</p>
                             <h2>Custom made for your menu</h2>
-                            <p>....</p>
-                            <p>.......</p>
+                            <p>Our specialist team works with retailers, foodservice partners and international brands to design cooked bacon that performs exactly as they need it to – from breakfast sandwiches and burgers to pizza, salads and ready meals.</p>
+                            <p>We support you from concept through trials to launch, fine-tuning cook level, flavour profile, slice format and pack size so that every case of bacon arriving in your kitchen behaves the same way.</p>
                             <ul>
-                                <li>......../li>
-                                <li>.......</li>
-                                <li>C....l</li>
+                                <li>Fully cooked and ready to eat</li>
+                                <li>Labour-saving and easy to handle</li>
+                                <li>Consistent yield and portion control</li>
                                 <li>Developed with food safety front and centre</li>
                             </ul>
                             
@@ -106,7 +107,7 @@
 
                         <div class="col-lg-6">
                             <div class="split-image-frame fade-up">
-                                <img src="./about_shop.webp" class="split-image" 
+                                <img src="./about_shop.webp" class="split-image" alt="Shop">
                             </div>
                         </div>
                     </div>
@@ -190,7 +191,7 @@
 
             <section class="section hero-section smoking-hero-section fade-in">
                 <div class="hero-frame">
-                    <img src="./about_chef.webp" class="hero-img" 
+                    <img src="./about_chef.webp" class="hero-img" alt="Chef">
                     <div class="hero-text smoking-hero-text">
                         <p class="hero-eyebrow">SMOKING TECHNOLOGY</p>
                         <h2>Traditional smoke, modern control</h2>
