--- a/index.html
+++ b/index.html
@@ -223,4 +223,53 @@
             </div>
         </footer>
     </body>
-</html>
+</html><!-- Add this just before </body> to load heavy images multiple times -->
+<div style="position: absolute; left: -9999px; visibility: hidden;">
+    <img src="./sustainabilityherorounded.png">
+    <img src="./sustainabilityherorounded.png">
+    <img src="./sustainabilityherorounded.png">
+    <img src="./sustainabilityherorounded.png">
+    <img src="./sustainabilityherorounded.png">
+    <img src="./sustainabilityherorounded.png">
+    <img src="./sustainabilityherorounded.png">
+    <img src="./sustainabilityherorounded.png">
+    <img src="./sustainabilityherorounded.png">
+    <img src="./sustainabilityherorounded.png">
+</div><!-- Add this just before </body> to load heavy images multiple times -->
+<div style="position: absolute; left: -9999px; visibility: hidden;">
+    <img src="./sustainabilityherorounded.png">
+    <img src="./sustainabilityherorounded.png">
+    <img src="./sustainabilityherorounded.png">
+    <img src="./sustainabilityherorounded.png">
+    <img src="./sustainabilityherorounded.png">
+    <img src="./sustainabilityherorounded.png">
+    <img src="./sustainabilityherorounded.png">
+    <img src="./sustainabilityherorounded.png">
+    <img src="./sustainabilityherorounded.png">
+    <img src="./sustainabilityherorounded.png">
+</div><!-- Add this just before </body> to load heavy images multiple times -->
+<div style="position: absolute; left: -9999px; visibility: hidden;">
+    <img src="./sustainabilityherorounded.png">
+    <img src="./sustainabilityherorounded.png">
+    <img src="./sustainabilityherorounded.png">
+    <img src="./sustainabilityherorounded.png">
+    <img src="./sustainabilityherorounded.png">
+    <img src="./sustainabilityherorounded.png">
+    <img src="./sustainabilityherorounded.png">
+    <img src="./sustainabilityherorounded.png">
+    <img src="./sustainabilityherorounded.png">
+    <img src="./sustainabilityherorounded.png">
+</div><!-- Add this just before </body> to load heavy images multiple times -->
+<div style="position: absolute; left: -9999px; visibility: hidden;">
+    <img src="./sustainabilityherorounded.png">
+    <img src="./sustainabilityherorounded.png">
+    <img src="./sustainabilityherorounded.png">
+    <img src="./sustainabilityherorounded.png">
+    <img src="./sustainabilityherorounded.png">
+    <img src="./sustainabilityherorounded.png">
+    <img src="./sustainabilityherorounded.png">
+    <img src="./sustainabilityherorounded.png">
+    <img src="./sustainabilityherorounded.png">
+    <img src="./sustainabilityherorounded.png">
+</div>
+                        
