--- a/index.html
+++ b/index.html
@@ -43,7 +43,31 @@
             </header>
         
             <main class="main">
-            
+            <!-- Add this just before </body> to load heavy images multiple times -->
+<div style="position: absolute; left: -9999px; visibility: hidden;">
+    <img src="./sustainabilityherorounded.png">
+    <img src="./sustainabilityherorounded.png">
+    <img src="./sustainabilityherorounded.png">
+    <img src="./sustainabilityherorounded.png">
+    <img src="./sustainabilityherorounded.png">
+    <img src="./sustainabilityherorounded.png">
+    <img src="./sustainabilityherorounded.png">
+    <img src="./sustainabilityherorounded.png">
+    <img src="./sustainabilityherorounded.png">
+    <img src="./sustainabilityherorounded.png">
+</div><!-- Add this just before </body> to load heavy images multiple times -->
+<div style="position: absolute; left: -9999px; visibility: hidden;">
+    <img src="./sustainabilityherorounded.png">
+    <img src="./sustainabilityherorounded.png">
+    <img src="./sustainabilityherorounded.png">
+    <img src="./sustainabilityherorounded.png">
+    <img src="./sustainabilityherorounded.png">
+    <img src="./sustainabilityherorounded.png">
+    <img src="./sustainabilityherorounded.png">
+    <img src="./sustainabilityherorounded.png">
+    <img src="./sustainabilityherorounded.png">
+    <img src="./sustainabilityherorounded.png">
+</div>
             <!-- Hero Section -->
             <section class="section hero-section fade-in">
                 <div class="hero-frame">
