--- a/Sustainability.html
+++ b/Sustainability.html
@@ -91,7 +91,7 @@
                 </div>
             </section>
 
-            <!-- Split section - two column layout with VIDEO 1: Hailu.mp4 -->
+            <!-- Split section - VIDEO 1: Hailu.mp4 -->
             <section class="section split-section fade-up">
                 <div class="container">
                     <div class="row align-items-center g-5">
@@ -132,7 +132,7 @@
                 </div>
             </section>
 
-            <!-- Stats Section with animated counters -->
+            <!-- Stats Section -->
             <section class="section stats-section">
                 <div class="container">
                     <h2 class="stats-heading fade-up">Our sustainability impact</h2>
@@ -186,7 +186,7 @@
                 </div>
             </section>
 
-            <!-- Full-width hero with left-aligned text -->
+            <!-- Full-width hero -->
             <section class="section hero-section smoking-hero-section fade-in">
                 <div class="hero-frame">
                     <img src="./Sutainablity Two.jpg" class="hero-img" alt="Pigs in comfortable, ethical farm environment">
@@ -206,7 +206,7 @@
                 </div>
             </section>
 
-            <!-- Split section with VIDEO 2: Hailuo_Template -->
+            <!-- Split section - VIDEO 2: Hailuo_Template -->
             <section class="section split-section fade-up">
                 <div class="container">
                     <div class="row align-items-center g-5">
@@ -220,7 +220,7 @@
                                     loop 
                                     playsinline
                                 >
-                                    <source src="./Hailuo_Template_Upload a real photo to generat_44929068910088194.mp4" type="video/mp4">
+                                    <source src="./Hailuo_Template_Upload%20a%20real%20photo%20to%20generat_44929068910088194.mp4" type="video/mp4">
                                     Your browser does not support the video tag.
                                 </video>
                             </div>
@@ -275,26 +275,14 @@
             </div>
             <div class="footer_right">
                 <ul>
-                    <li>
-                        <a href="./index.html">Home</a>
-                    </li>
-                    <li>
-                        <a href="./about-us.html">About Us</a>
-                    </li>
-                    <li>
-                        <a href="./our-products.html">Our Products</a>
-                    </li>
+                    <li><a href="./index.html">Home</a></li>
+                    <li><a href="./about-us.html">About Us</a></li>
+                    <li><a href="./our-products.html">Our Products</a></li>
                 </ul>
                 <ul>
-                    <li>
-                        <a href="./our-process.html">Our Process</a>
-                    </li>
-                    <li>
-                        <a href="./Sustainability.html">Sustainability</a>
-                    </li>
-                    <li>
-                        <a href="./contact.html">Contact</a>
-                    </li>
+                    <li><a href="./our-process.html">Our Process</a></li>
+                    <li><a href="./Sustainability.html">Sustainability</a></li>
+                    <li><a href="./contact.html">Contact</a></li>
                 </ul>
             </div>
         </footer>
